k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rocknDogs
  labels:
    name: rocknDogs
    environment: development
